--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   path_provider: ^2.1.1
-  firebase_core: 
+  http: ^1.3.0
+  firebase_core: ^3.13.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +22,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
