--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   http: ^1.3.0
   firebase_core: ^3.13.0
   flutter_dotenv: ^5.2.1
+  shared_preferences: ^2.5.3
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+
 
 dev_dependencies:
   flutter_test:
@@ -23,4 +27,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/images/
     - .env
