--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,11 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
-
-
+  provider: ^6.1.4
+  image_picker: ^1.0.7
+  permission_handler : ^12.0.0+1
+  path: ^1.9.1
+  hive_flutter: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
