--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="flutter_at_akira_menai"
+        android:label="Temply"
         android:icon="@mipmap/ic_launcher">
 
         <activity
