--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,33 @@ dependencies:
   permission_handler : ^12.0.0+1
   path: ^1.9.1
   hive_flutter: ^1.1.0
+  lottie: ^3.3.1
+  smooth_page_indicator: ^1.2.1
+  animations: ^2.0.11
+  flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/TemplyLogoTransparentIcon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/TemplyLogoTransparentIcon.png"
 
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/templyLogoTransparentBg (Medium).png
+  android: true
+  ios: true
+  web: false
+  android_gravity: center
+  ios_content_mode: center
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/animations/
     - .env
