--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,15 @@ dependencies:
   animations: ^2.0.11
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.6
+  json_annotation: ^4.8.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.6.1
+  hive_generator: ^2.0.1
+
 flutter_launcher_icons:
   android: true
   ios: true
