--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   google_sign_in: ^6.3.0
   provider: ^6.1.4
   image_picker: ^1.0.7
-  permission_handler : ^12.0.0+1
+  permission_handler: ^12.0.0+1
   path: ^1.9.1
   hive_flutter: ^1.1.0
   lottie: ^3.3.1
@@ -28,6 +28,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.6
   json_annotation: ^4.8.0
+  awesome_snackbar_content: ^0.1.5
+  google_nav_bar: ^5.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
