--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   http: ^1.3.0
   firebase_core: ^3.13.0
   flutter_dotenv: ^5.2.1
-  shared_preferences: ^2.5.3
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
   provider: ^6.1.4
@@ -30,6 +29,13 @@ dependencies:
   json_annotation: ^4.8.0
   awesome_snackbar_content: ^0.1.5
   google_nav_bar: ^5.0.7
+  intl: ^0.19.0
+  flutter_markdown: ^0.7.7
+  flutter_slidable: ^4.0.0
+  timezone: ^0.10.0
+  flutter_local_notifications: ^19.1.0
+  flutter_timezone: ^4.1.0
+  fl_chart: ^0.71.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
